--- a/gallary.html
+++ b/gallary.html
@@ -6,7 +6,7 @@
     <title>Biruk Ayalew</title>
     <link rel="shortcut icon" href="./Assets/Images/bicon.png" type="image/x-icon">
 </head>
-<body bgcolor="fbf9f4" vlink="red">
+<body link="#FF0000" alink="#FF0000"  vlink="#FF0000"  bgcolor="fbf9f4">
     <table>
         <tr>
             <table>
@@ -119,7 +119,7 @@
                         <table bgcolor="white">
                             <tr>
                                 <td>
-                                    <img src="./Assets/Images/culture.JPG" alt="image3" width="350px" height="300px"><br>
+                                    <img src="./Assets/Images/culture.jpg" alt="image3" width="350px" height="300px"><br>
                                 </td>
                             </tr>
                             <tr>
