--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Biruk Ayalew</title>
     <link rel="shortcut icon" href="./Assets/Images/bicon.png" type="image/x-icon">
 </head>
-<body VLINK="red" bgcolor="#fbf9f4"></body>
+<body  link="#FF0000" alink="#FF0000"  vlink="#FF0000"   bgcolor="#fbf9f4" ></body>
 <table>
     <tr>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
