--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <title>Biruk Ayalew</title>
     <link rel="shortcut icon" href="./Assets/Images/bicon.png" type="image/x-icon">
 </head>
-<body bgcolor="fbf9f4" vlink="red">
+<body  link="#FF0000" alink="#FF0000"  vlink="#FF0000"  bgcolor="fbf9f4">
     <table>
         <tr>
             <table>
@@ -165,7 +165,7 @@
                     <td>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a href="https://www.youtube.com/results?search_query=learn+Java"><img src="./Assets/Images/java.jpeg" alt="java image" width="153px" height="110px"></a>
+                        <a href="https://www.youtube.com/results?search_query=learn+Java"><img src="./Assets/Images/java2.png" alt="java image" width="153px" height="110px"></a>
                     </td>
                 </tr>
                 <tr>
