--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Biruk Ayalew</title>
     <link rel="shortcut icon" href="./Assets/Images/bicon.png" type="image/x-icon">
 </head>
-<body bgcolor="fbf9f4" vlink="red">
+<body link="#FF0000" alink="#FF0000"  vlink="#FF0000"  bgcolor="fbf9f4">
     <table>
         <tr>
             <table>
@@ -137,7 +137,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;
-                        <img src="./Assets/Images/friends3.JPG" alt="image2" width="610px" height="400px">    
+                        <img src="./Assets/Images/friends3.jpg" alt="image2" width="610px" height="400px">    
                     </td>
                     
                 </tr>
