--- a/talks.html
+++ b/talks.html
@@ -6,7 +6,7 @@
     <title>Biruk Ayalew</title>
     <link rel="shortcut icon" href="./Assets/Images/bicon.png" type="image/x-icon">
 </head>
-<body bgcolor="fbf9f4" vlink="red">
+<body link="#FF0000" alink="#FF0000"  vlink="#FF0000"  bgcolor="fbf9f4">
     <table>
         <tr>
             <table>
